# mppi_ros2

./: .gitignore  CLAUDE.md  README.md  RESULTS.md  TODO.md  package.xml  pyproject.toml  requirements.txt  setup.py
configs/: mppi_controller.yaml  trajectory.yaml
docs/: SIMULATION_ENVIRONMENTS.md
docs/learned_models/: LEARNED_MODELS_ARCHITECTURE_KR.md  LEARNED_MODELS_GUIDE.md  META_LEARNING.md  ONLINE_LEARNING.md
docs/mppi/: DYNAMIC_MODEL_TIPS.md  IMPLEMENTATION_STATUS.md  PRD.md
docs/safety/: SAFETY_CRITICAL_CONTROL.md
examples/: mppi_all_variants_benchmark.py
examples/comparison/: cbf_mppi_obstacle_avoidance_demo.py  disturbance_profiles.py  dynamic_obstacle_avoidance_demo.py  gpu_benchmark_demo.py  kinematic_vs_dynamic_demo.py  model_comparison_demo.py  model_mismatch_comparison_demo.py  physics_vs_learned_demo.py  safety_comparison_demo.py  safety_s3_comparison_demo.py  shield_mppi_demo.py  smooth_mppi_models_comparison.py  spline_mppi_models_comparison.py  svg_mppi_models_comparison.py  svmpc_models_comparison.py  vanilla_vs_log_mppi_demo.py  vanilla_vs_tube_demo.py
examples/dynamic/: mppi_differential_drive_dynamic_demo.py
examples/kinematic/: mppi_ackermann_demo.py  mppi_differential_drive_kinematic_demo.py  mppi_swerve_drive_demo.py
launch/: mppi_sim.launch.py
rviz/: mppi_sim.rviz
tests/: test_base_mppi.py  test_cbf_mppi.py  test_cost_functions.py  test_data_pipeline.py  test_dynamic_obstacles.py  test_dynamics_wrapper.py  test_ensemble_validator_uncertainty.py  test_gatekeeper_superellipsoid.py  test_gaussian_process_dynamics.py  test_gpu_mppi.py  test_log_mppi.py  test_maml.py  test_mc_dropout_checkpoint.py  test_metrics.py  test_neural_dynamics.py  test_obstacle_detector.py  test_obstacle_tracker.py  test_online_learner.py  test_residual_dynamics.py  test_risk_aware_mppi.py  test_robot_models.py  test_safety_advanced.py  test_safety_s3.py  test_sampling.py  test_shield_mppi.py  test_simulator.py  test_smooth_mppi.py  test_spline_mppi.py  test_stein_variational_mppi.py  test_svg_mppi.py  test_trainers.py  test_trajectory.py  test_tsallis_mppi.py  test_tube_mppi.py
(+93 files in other folders)
